--- a/public/frontend/assets/css/style.css
+++ b/public/frontend/assets/css/style.css
@@ -368,8 +368,11 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top right;
+  background: url("../img/hero-bg.jpeg");
   background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 #hero .container {
   padding-top: 70px;
@@ -385,10 +388,10 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
-  color: #222222;
+  color: #34b7a7;
 }
 #hero h2 {
-  color: #6f6f6f;
+  color: #f5f5f5;
   margin: 10px 0 0 0;
   font-size: 22px;
 }
@@ -406,6 +409,15 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   background: #34b7a7;
 }
+#hero:before {
+  content: "";
+  background-color: rgba(27, 27, 26, 0.575);
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+}
 #hero .btn-about:hover {
   background: #3dc8b7;
 }
@@ -415,15 +427,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 @media (max-width: 992px) {
-  #hero:before {
-    content: "";
-    background: rgba(255, 255, 255, 0.8);
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    left: 0;
-    right: 0;
-  }
+  
   #hero h1 {
     font-size: 28px;
     line-height: 36px;
